# Variant_catalogue_pipeline

./: .gitattributes  .gitignore  CAFE_pipeline_conda.yml  LICENSE.md  Nextflow_SNV_MT.sh  Nextflow_SNV_MT_211220.nf  README.md  Variant_Catalogue_v1.nf  Variant_Catalogue_v1.sh  install.sh  main.nf  nextflow.config  sample_QC.txt  severity_table.tsv  software_information  software_information.md  ~.bashrc
modules/: GATK_index.nf  GLnexus.nf  Hail_MEI_QC.nf  (+85 more)
publisher/: .env-sample  .gitignore  README.md  checkt.py  delete-tables.py  do_import.py  environment.yml  import_utils.py  model_import_actions.py  publish.py  publish_test.py  pyproject.toml  severities.tsv  tables.py  test-db.py
publisher/fixtures/genes/: genes_1.tsv
publisher/fixtures/genomic_gnomad_frequencies/: genomic_gnomad_frequencies_1.tsv
publisher/fixtures/genomic_ibvl_frequencies/: genomic_ibvl_frequencies.tsv  genomic_ibvl_frequencies_1.tsv  genomic_ibvl_frequencies_2.tsv  genomic_ibvl_frequencies_3.tsv
publisher/fixtures/mt_gnomad_frequencies/: mt_gnomad_frequencies.tsv
publisher/fixtures/mt_ibvl_frequencies/: mt_ibvl_frequencies.tsv
publisher/fixtures/mts/: mts.tsv
publisher/fixtures/snvs/: snvs_1.tsv
publisher/fixtures/str/: str.tsv
publisher/fixtures/sv_consequences/: sv_consequences_MEI_1.tsv
publisher/fixtures/svs/: svs_SV_1.tsv
publisher/fixtures/transcripts/: transcripts_1.tsv
publisher/fixtures/variants/: variants_1.tsv
publisher/fixtures/variants_annotations/: variants_annotations_1.tsv
publisher/fixtures/variants_consequences/: variants_consequences_1.tsv
(+64 files in other folders)
