[project]
name = "publisher"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bradwbradw", email = "braddjwinter@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "pymysql>=1.1.1",
    "sqlalchemy-utils>=0.41.2",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "natsort>=8.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/publisher"]
